--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,15 @@
 {
 	"name": "webchemistry/metadata",
 	"require": {
-		"php": ">= 8.0",
+		"php": ">=8.1",
 		"nette/utils": "^3.0.0"
 	},
 	"autoload": {
 		"psr-4": {
 			"WebChemistry\\Metadata\\": "src"
 		}
+	},
+	"require-dev": {
+		"nette/http": "^3.1"
 	}
 }
