--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "webchemistry/metadata",
 	"require": {
 		"php": ">=8.1",
-		"nette/utils": "^3.0.0"
+		"nette/utils": "^3.2"
 	},
 	"autoload": {
 		"psr-4": {
@@ -10,6 +10,7 @@
 		}
 	},
 	"require-dev": {
-		"nette/http": "^3.1"
+		"nette/http": "^3.1",
+		"nette/di": "^3.0"
 	}
 }
